commint version test no va

--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
   	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/component.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="css/animate.css">
+	<!-- <link rel="stylesheet" href="css/animate.css"> -->
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/flaticon.css">
   	<link rel="stylesheet" href="css/icomoon.css">
@@ -82,7 +82,7 @@
 	<section class="content_blog" id="content_blog">
 		<div class="container">
 			<div class="row d-flex">
-				<div class="col-md-4 d-flex wow fadeInUp">
+				<div class="col-md-4 d-flex" data-aos="fade-up">
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
 							<a href="blog-single/destinos-ocultos.html"><img src="img/destination.jpg" class="img" alt=""></a>
@@ -99,7 +99,7 @@
 						</div> -->
 					</div>
 				</div>
-				<div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="1.5s" data-wow-dealy="2.5s"> 
+				<div class="col-md-4 d-flex" data-aos="fade-up" data-aos-delay="50" data-aos-duration="1000"> 
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
 							<a href="blog-single/3-piscinas.html"><img src="img/destination.jpg" class="img" alt=""></a>
@@ -116,7 +116,7 @@
 						</div> -->
 					</div>
 				</div>
-				<div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="2s" data-wow-dealy="3s">
+				<div class="col-md-4 d-flex" data-aos="fade-up" data-aos-delay="70" data-aos-duration="1200" data-aos-mirror="true" data-aos-once="false">
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
 							<a href=""><img src="img/destination.jpg" class="img" alt=""></a>
@@ -133,7 +133,7 @@
 						</div> -->
 					</div>
 				</div>
-				<div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="2.5s" data-wow-dealy="3.5s">
+				<div class="col-md-4 d-flex">
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
 							<a href=""><img src="img/destination.jpg" class="img" alt=""></a>
@@ -150,7 +150,7 @@
 						</div> -->
 					</div>
 				</div>
-				<div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="3s" data-wow-dealy="4s">
+				<div class="col-md-4 d-flex">
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
 							<a href=""><img src="img/destination.jpg" class="img" alt=""></a>
@@ -167,7 +167,7 @@
 						</div> -->
 					</div>
 				</div>
-				<div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="3.5s" data-wow-dealy="4.5s">
+				<div class="col-md-4">
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
 							<a href=""><img src="img/destination.jpg" class="img" alt=""></a>
@@ -257,7 +257,7 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/mdb.min.js"></script>
 	<script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
-	<script type="text/javascript" src="js/wow.min.js"></script>
+	<!-- <script type="text/javascript" src="js/wow.min.js"></script> -->
 	<script type="text/javascript" src="js/sal.js"></script>
 	<script type="text/javascript" src="js/aos.js"></script>
 	<script type="text/javascript" src="js/scrollax.js"></script>
