cambios del footer

--- a/destinos/D-7tinajas.html
+++ b/destinos/D-7tinajas.html
@@ -135,12 +135,12 @@
                     <p>
                         Ubicado a 20 minutos de la ciudad de Quillabamba en la ruta Quillabamba - Echarati. Siete Tinajas es una quebrada de afloraciones líticas de tipo granítica a manera de cascada, por donde discurren aguas que con el paso del tiempo han labrado en la roca formando cauces irregulares y formaciones caprichosas a manera de tinas o estanques en un numero de 7 que es de donde proviene su nombre.
                     </p>
-                    <div class=" mt-5">
-                        <a href="../img/mini-destinos/7-tinajas/fotos/2.jpg" class="btn-popup map-gal">ver mapa</a>
+                    <div class="d-flex justify-content-center">
+                        <a href="../img/mapas/7 tinajas.jpg" class="btn-popup map-gal">ver mapa</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6">
-                    <div class="div">
+                    <div class="">
                         <img src="../img/mini-destinos/7-tinajas/destinos-principal-7-tinajas.jpg" alt="img-portada-7-tinjas" class="img-fluid">
                     </div>
                 </div>
@@ -169,20 +169,44 @@
         </div>
     </section>
     <!-- End info -->
+    <!-- Modal -->
+  <div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+          <div class="modal-header">
+              <h4 class="modal-title w-100" id="myModalLabel">El Clima en Quillabamba, La Convención</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+                  <a class="weatherwidget-io" href="https://forecast7.com/es/n13d52n71d99/santa-ana/?unit=us" data-label_1="Santa Ana" data-label_2="Quillabamba" data-theme="original" >Santa Ana Quillabamba</a>
+                  <script>
+                  !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+                  </script>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+          </div>
+          </div>
+      </div>
+  </div>
+<!-- End modal -->
     <!-- Start Footer -->
     <footer class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="col-6 col-sm-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
                         <div class="footer_contact_icon"><img src="../img/svg/suitcase-1.svg" alt="icono-suitcase-img"></div>
                         <div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
                         <div class="footer_contact_btn">
                             <a href="#!" class="primary-btn" >Leer más</a>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="col-6 col-sm-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
                         <div class="footer_contact_icon"><img src="../img/svg/placeholder.svg" alt="icono-location-img"></div>
-                        <div class="footer_contact_title"><h2>como llegar  <br> a tus destinos</h2></div>
+                        <div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
                         <div class="footer_contact_btn">
                             <a href="#!" class="primary-btn" >Leer más</a>
                         </div>
@@ -243,7 +267,7 @@
     <script type="text/javascript" src="../js/unitegallery.min.js"></script>
     <script type="text/javascript" src="../js/scrollax.js"></script>
     <script type="text/javascript" src="../js/sal.js"></script>
-    <script type="text/javascript" src="../js/new.js"></script>
+    <script type="text/javascript" src="../js/new.js"></script> 
     <script type="text/javascript" src="../js/main.js"></script> 
 </body>
 </html>
