--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 	<!-- Navbar -->
 	<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
 	<div class="container">
+		<a class="navbar-brand d-none" href="">
+			<img src="../img/logo/LOGO BLANCO .png" class="img-fluid" alt="">
+		</a>
 		<!-- Collapse -->
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 		aria-expanded="false" aria-label="Toggle navigation">
@@ -85,9 +88,9 @@
 			</video>
 			<div class="mask rgba-black-light d-flex justify-content-center align-items-center">
 			<div class="text-center white-text mx-5 wow fadeIn">
-				<h1 class="mb-4">
+				<h2 class="text-white mb-4 h1">
 				<strong>Destinos Quillabamba</strong>
-				</h1>
+				</h2>
 
 				<p class="text-white">
 				<strong>¡vive! ¡Disfruta! ¡Viaja!</strong>
@@ -105,9 +108,9 @@
 			</video>
 			<div class="mask rgba-black-light d-flex justify-content-center align-items-center">
 			<div class="text-center white-text mx-5 wow fadeIn">
-				<h1 class="mb-4">
+				<h2 class="mb-4 h1 text-white">
 					<strong>Destinos Quillabamba</strong>
-				</h1>
+				</h2>
 				<p class="text-white">
 					<strong>¡vive! ¡Disfruta! ¡Viaja!</strong>
 				</p>
@@ -125,9 +128,9 @@
 			</video>
 			<div class="mask rgba-black-light d-flex justify-content-center align-items-center">
 			<div class="text-center white-text mx-5 wow fadeIn">
-				<h1 class="mb-4">
+				<h2 class="mb-4 h1 text-white">
 					<strong>Destinos Quillabamba</strong>
-				</h1>
+				</h2>
 				<p class="text-white">
 					<strong>¡vive! ¡Disfruta! ¡Viaja!</strong>
 				</p>
@@ -206,7 +209,7 @@
 			<div class="col-lg-5 offset-lg-1">
 				<div class="right-content">
 					<div class="main_title" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="600" data-sal-easing="ease-out-bounce">
-						<h1>Lugares <br>Populares</h1>
+						<h2 class="h1">Lugares <br>Populares</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
 							dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
 					</div>
@@ -267,7 +270,7 @@
 			<div class="col-md-7">
 				<div class="title-packetes d-flex justify-content-center">
 					<div class="" data-sal-duration="1200" data-sal="slide-left" data-sal-delay="300" data-sal-easing="ease-out-bounce">
-						<h1>Explora la Convención</h1>
+						<h2 class="">Explora la Convención</h2>
 						<p>Conosca todas las marvillas turisticas gastronomicas y de aventura <br> de toda la provincica de la Convención - Quillabamba</p>
 					</div>
 				</div>
@@ -277,12 +280,12 @@
 			<div class="col-12 col-sm-12 col-md-4 col-lg-4 card-thumb" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="400" data-sal-easing="ease-out-bounce">
 				<div class="Experience">
 					<div class="view overlay zoom rounded z-depth">
-						<img class="img-fluid" src="img/img_1.jpg" alt="">
-						<a href="paquetes/tour-1.html">
+						<img class="img-fluid" src="img/paquete-1.jpg" alt="">
+						<a href="paquetes/experiencia-1.html">
 							<div class="mask rgba-white-slight"></div>
 						</a>
 					</div>
-						<a href="paquetes/tour-1.html" class=" text-thumb">
+						<a href="#!" class=" text-thumb">
 							<h6 class="font-weight-bold"><i class="fas fa-map pr-2"></i>Adventure</h6>
 							</a>
 						<h4 class="font-weight-bold"><strong>Tour Quillabamba</strong></h4>
@@ -293,33 +296,33 @@
 			<div class="col-12 col-sm-12 col-md-4 col-lg-4 mt-xs-4 card-thumb" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="500" data-sal-easing="ease-out-bounce">
 				<div class="Experience">
 					<div class="view overlay zoom rounded z-depth">
-						<img class="img-fluid" src="img/img_1.jpg" alt="">
-						<a href="paquetes/tour-2.html">
+						<img class="img-fluid" src="img/paquete-2.jpg" alt="">
+						<a href="paquetes/experiencia-2.html">
 							<div class="mask rgba-white-slight"></div>
 						</a>
 					</div>
-						<a href="paquetes/tour-2.html" class=" text-thumb">
+						<a href="#!" class=" text-thumb">
 							<h6 class="font-weight-bold"><i class="fas fa-map pr-2"></i>Adventure</h6>
 							</a>
 						<h4 class="font-weight-bold"><strong>Tour Quillabamba</strong></h4>
 							<p class="dark-grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, debitis?</p>
-						<a href="paquetes/tour-2.html" class="btn btn-rounded btn-md primary-btn">Leer más</a>
+						<a href="paquetes/experiencia-2.html" class="btn btn-rounded btn-md primary-btn">Leer más</a>
 				</div>
 			</div>
 			<div class="col-12 col-sm-12 col-md-4 col-lg-4 card-thumb" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="600" data-sal-easing="ease-out-bounce">
 				<div class="Experience">
 					<div class="view overlay zoom rounded z-depth">
-						<img class="img-fluid" src="img/img_1.jpg" alt="">
-						<a href="paquetes/tour-3.html">
+						<img class="img-fluid" src="img/paquete-3-city-tour.jpg" alt="">
+						<a href="paquetes/experiencia-3.html">
 							<div class="mask rgba-white-slight"></div>
 						</a>
 					</div>
-						<a href="paquetes/tour-3.html" class=" text-thumb">
+						<a href="#!" class=" text-thumb">
 							<h6 class="font-weight-bold"><i class="fas fa-map pr-2"></i>Adventure</h6>
 							</a>
 						<h4 class="font-weight-bold"><strong>Tour Quillabamba</strong></h4>
 							<p class="dark-grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, debitis?</p>
-						<a href="paquetes/tour-3.html" class="btn btn-rounded btn-md primary-btn">Leer más</a>
+						<a href="paquetes/experiencia-3.html" class="btn btn-rounded btn-md primary-btn">Leer más</a>
 				</div>
 			</div>
 		</div>
@@ -332,7 +335,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col text-center">
-				<div class="section_title" data-sal-duration="1200" data-sal="fade" data-sal-delay="300" data-sal-easing="ease-out-bounce"><h2>Popular Destinos</h2></div>
+				<div class="section_title" data-sal-duration="1200" data-sal="fade" data-sal-delay="300" data-sal-easing="ease-out-bounce"><h2>Destinos Populares</h2></div>
 			</div>
 		</div>
 		<div class="row why-row">
@@ -340,7 +343,7 @@
 				<div class="why_item">
 					<div class="why_image">
 						<div class="view overlay zoom">
-							<img src="img/why_2.jpg" alt="">
+							<img src="img/mini-destinos/7-tinajas/destinos-principal-7-tinajas.jpg" alt="">
 							<a href="#!">
 								<div class="mask rgba-white-slight"></div>
 							</a>
@@ -350,7 +353,7 @@
 						</div>
 					</div>
 					<div class="why_content text-center">
-						<div class="why_title">Fast Services</div>
+						<div class="why_title">7 Tinajas</div>
 						<div class="why_text">
 							<p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo.</p>
 						</div>
@@ -361,7 +364,7 @@
 					<div class="why_item">
 						<div class="why_image">
 							<div class="view overlay zoom">
-								<img src="img/why_2.jpg" alt="">
+								<img src="img/mini-destinos/huayllayoc/pagina-huayllayoc.jpg" alt="">
 								<a href="#!">
 									<div class="mask rgba-white-slight"></div>
 								</a>
@@ -371,7 +374,7 @@
 							</div>
 						</div>
 						<div class="why_content text-center">
-							<div class="why_title">Great Team</div>
+							<div class="why_title">Huayllayoc</div>
 							<div class="why_text">
 								<p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo.</p>
 							</div>
@@ -382,7 +385,7 @@
 					<div class="why_item">
 						<div class="why_image">
 							<div class="view overlay zoom">
-								<img src="img/why_2.jpg" alt="">
+								<img src="img/mini-destinos/Catarata-Villa-Rica/destinos--Catara-Villa-Rica.jpg" alt="">
 								<a href="#!">
 									<div class="mask rgba-white-slight"></div>
 								</a>
@@ -392,7 +395,7 @@
 							</div>
 						</div>
 						<div class="why_content text-center">
-							<div class="why_title">Great Team</div>
+							<div class="why_title">Villa Rica</div>
 							<div class="why_text">
 								<p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo.</p>
 							</div>
@@ -446,37 +449,41 @@
 	</div>
 </section>
 <!-- end our blog -->
-
-<!-- socail  -->
-<section class="social">
-	<div class="parallax-img d-flex align-items-center">
-		<div class="container">
-			<div class="row">
-				<div class="col text-center text-white">
-					<div class="section_title">Encuentranos en:</div>
+<!-- end social -->
+<section class="bg-footer overlay"  style="background-image: url(img/hero_bg_1.jpg);">
+	<div class="container">
+		<div class="row row_contact">
+			<div class="col-12 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+				<div class="footer_contact_icon"><img src="img/svg/suitcase-1.svg" alt=""></div>
+				<div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
+				<div class="footer_contact_btn">
+					<a href="#!" class="primary-btn" >Leer más</a>
 				</div>
 			</div>
-			<div class="row mt-3">
-				<div class="col d-flex justify-content-center">
-					<ul class="footer_social list-unstyled float-md-left float-lft">
-						<li class="social_animate"><a class="icon-1" href="#"><span class="icon-twitter"></span></a></li>
-						<li class="social_animate"><a class="icon-2" href="#"><span class="icon-facebook"></span></a></li>
-						<li class="social_animate"><a class="icon-3" href="#"><span class="icon-instagram"></span></a></li>
-						<li class="social_animate"><a class="icon-4" href="#"><span class="icon-youtube"></span></a></li>
-					</ul>
+			<div class="col-12 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+				<div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt=""></div>
+				<div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
+				<div class="footer_contact_btn">
+					<a href="#!" class="primary-btn" >Leer más</a>
+				</div>
+			</div>
+			<div class="col-12 col-sm-12 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+				<div class="footer_contact_icon"><img src="img/svg/sun.svg" alt=""></div>
+				<div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
+				<div class="footer_contact_btn">
+					<a href=""  data-toggle="modal" data-target="#centralModalSm" class="primary-btn" >Leer más</a>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
-<!-- end social -->
 <!-- Modal -->
 <div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title w-100" id="myModalLabel">Modal title</h4>
+        <h4 class="modal-title w-100" id="myModalLabel">El Clima en Quillabamba, La Convención</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -495,65 +502,42 @@
 </div>
 <!-- End modal -->
 <!-- start footer -->
-<footer class="footer">
+<footer>
 	<div class="container">
-		<div class="row row_contact">
-			<div class="col-12 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-				<div class="footer_contact_icon"><img src="img/svg/suitcase-1.svg" alt=""></div>
-				<div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
-				<div class="footer_contact_btn">
-					<a href="#!" class="primary-btn" >Leer más</a>
+		<div class="row">
+			<div class="col-md-3">
+				<div class="img">
+					<img src="img/logo/Recurso 2.png" alt="">
+					<h2>Destinos Quillabamba</h2>
 				</div>
 			</div>
-			<div class="col-12 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-				<div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt=""></div>
-				<div class="footer_contact_title"><h2>como llegar  <br> a tus destinos</h2></div>
-				<div class="footer_contact_btn">
-					<a href="#!" class="primary-btn" >Leer más</a>
+			<div class="col-md-3">
+				<div class="img">
+					<img src="img/logo/vive disfruta viaja_1.png" alt="">
 				</div>
 			</div>
-			<div class="col-12 col-sm-12 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-				<div class="footer_contact_icon"><img src="img/svg/sun.svg" alt=""></div>
-				<div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
-				<div class="footer_contact_btn">
-					<a href=""  data-toggle="modal" data-target="#centralModalSm" class="primary-btn" >Leer más</a>
-				</div>
+			<div class="col-md-3">
+				
 			</div>
-		</div>
-		<div class="row footer_info">
-			<div class="col-12 col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center text-center">
-				<div class="footer_dest text-center">
-					<div class="dest_logo"><img src="img/logo/Recurso 2.png" alt=""></div>
-					<h2 class="title_dest mt-3">Destinos Quillabamba</h2>
-				</div>
-			</div>
-			<div class="col-12 col-sm-12 col-md-4 col-lg-4"></div>
-			<div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_info_questions d-flex align-items-center justify-content-center">
-				<div class="questions_footer">
-					<h3>¿tienes alguna pregunta?</h3>
-					<div class="questions_icon">
-						<ul>
-							<li><span class="icon icon-location2"></span>
-								<span class="text">Av. Bolgnesi. <br>
-									Quillabamba, Cusco, Perú</span>
-							</li>
-							<li><span class="icon icon-phone"></span>
-								<span class="text">+51 986-571790</span>
-							</li>
-							<li><span class="icon icon-mail2"></span>
-								<span class="text">info@destinosquillabamba.com</span>
-							</li>
-						</ul>
+			<div class="col-12 col-sm-12 col-md-3 col-lg-3 footer_info_questions d-flex align-items-center justify-content-center">
+					<div class="questions_footer">
+						<h3>¿tienes alguna pregunta?</h3>
+						<div class="questions_icon">
+							<ul>
+								<li><span class="icon icon-location2"></span>
+									<span class="text">Av. Bolgnesi. <br>
+										Quillabamba, Cusco, Perú</span>
+								</li>
+								<li><span class="icon icon-phone"></span>
+									<span class="text">+51 986-571790</span>
+								</li>
+								<li><span class="icon icon-mail2"></span>
+									<span class="text">info@destinosquillabamba.com</span>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-		<div class="row py-4">
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-				<div class="d-flex justify-content-center align-items-center text-center">
-					<p class="text-white">Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos Los derechos reservados | Destinos Quillabamba <i class="icon-heart-o" aria-hidden="true"></i></p>
-				</div>
-			</div>
 		</div>
 	</div>
 </footer>
