--- a/blog-single/3-piscinas.html
+++ b/blog-single/3-piscinas.html
@@ -48,31 +48,33 @@
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <ul class="navbar-nav m-auto d-flex align-items-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="destinos.html">Destinos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="galeria.html">Galeria</a>
-                    </li>
-                    <a href="index.html">
-                        <div class="logo">
-                            <img src="img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="">
-                        </div>
-                    </a>
-                    <li class="nav-item">
-                        <a class="nav-link" href="videos.html">Videos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">contacto</a>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav m-auto d-flex align-items-center">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../destinos.html">Destinos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../galeria.html">Galeria</a>
+                        </li>
+                        <a href="../index.html">
+                            <div class="logo">
+                                <img src="../img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="">
+                            </div>
+                        </a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../videos.html">Videos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../blog.html">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../contacto.html">contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
         <div class="site-cover overlay" style="background-image: url(../img/hero_bg_1.jpg); background-attachment: fixed;">
@@ -94,30 +96,6 @@
         </div>        
     </header>
     <!-- End header -->
-<!-- Modal -->
-<div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title w-100" id="myModalLabel">Modal title</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-			<a class="weatherwidget-io" href="https://forecast7.com/es/n13d52n71d99/santa-ana/?unit=us" data-label_1="Santa Ana" data-label_2="Quillabamba" data-theme="original" >Santa Ana Quillabamba</a>
-			<script>
-			!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-			</script>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End modal -->
 <section class="section-blog-single">
     <div class="container">
         <div class="row">
@@ -156,7 +134,7 @@
                             Lunes a Domingo 10:00 am. – 6:00 pm. Incluye feriados.
                         </p> 
                     </div>
-                    <a href="../img/mini-destinos/7-tinajas/fotos/2.jpg" class="btn-popup image-link">ver mapa</a>
+                    <a href="../img/blog/mapa-sambaray.PNG" class="btn-popup map-gal">ver mapa</a>
                 </div>
                 <div class="top-border">
                     <figure class="figure">
@@ -183,7 +161,7 @@
                                 Lunes a Domingo 08:00 am. – 5:00 pm. Incluye feriados.
                             </p>
                     </div>
-                    <a href="../img/mini-destinos/7-tinajas/fotos/2.jpg" class="btn-popup image-link">ver mapa</a>
+                    <a href="../img/blog/mapa-echarati.PNG" class="btn-popup map-gal">ver mapa</a>
                 </div>
                 <div class="top-border">
                     <figure class="figure">
@@ -208,7 +186,7 @@
                                 Lunes a Domingo 08:00 am. – 5:00 pm. Incluye feriados.
                             </p>
                     </div>
-                    <a href="../img/mini-destinos/7-tinajas/fotos/2.jpg" class="btn-popup image-link">ver mapa</a>
+                    <a href="../img/blog/mapa-maranura.PNG" class="btn-popup map-gal">ver mapa</a>
                 </div>
                 <div class="questions my-5">
                         <h4 class="questions-text">¿Conoces otras piscinas espectaculares en Quillabamba que nos falto incorporar a esta lista? !Deja tu recomendación en los comentarios!</h4>
@@ -218,9 +196,9 @@
                 <div class="fb-comments" data-href="https://destinosquillabamba.com/3-piscinas" data-width="" data-numposts="5"></div>
             </div>
             <div class="col-md-4">
-                <div class="mt-5 mb-4 py-5">
+                <!-- <div class="mt-5 mb-4 py-5">
                     <div class="fb-page" data-href="https://www.facebook.com/DestinosQuillabamba/" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/DestinosQuillabamba/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/DestinosQuillabamba/">Destinos Quillabamba</a></blockquote></div>
-                </div>
+                </div> -->
                 <hr>
                 <div class="single-side-bar mt-5">
                     <h4 class="popular-title">Destinos Populares</h4>
@@ -265,6 +243,30 @@
         </div>
     </div>
 </section>
+  <!-- Modal -->
+  <div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+          <div class="modal-header">
+              <h4 class="modal-title w-100" id="myModalLabel">El Clima en Quillabamba, La Convención</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+                  <a class="weatherwidget-io" href="https://forecast7.com/es/n13d52n71d99/santa-ana/?unit=us" data-label_1="Santa Ana" data-label_2="Quillabamba" data-theme="original" >Santa Ana Quillabamba</a>
+                  <script>
+                  !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+                  </script>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+          </div>
+          </div>
+      </div>
+  </div>
+<!-- End modal -->
 <!-- start footer -->
 <footer class="footer">
 	<div class="container">
