--- a/blog-single/destinos-ocultos.html
+++ b/blog-single/destinos-ocultos.html
@@ -94,30 +94,6 @@
         </div>        
     </header>
     <!-- End header -->
-<!-- Modal -->
-<div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title w-100" id="myModalLabel">Modal title</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-			<a class="weatherwidget-io" href="https://forecast7.com/es/n13d52n71d99/santa-ana/?unit=us" data-label_1="Santa Ana" data-label_2="Quillabamba" data-theme="original" >Santa Ana Quillabamba</a>
-			<script>
-			!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-			</script>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End modal -->
 <section class="section-blog-single">
     <div class="container">
         <div class="row">
@@ -142,7 +118,7 @@
 						<h4 class="py-4">¿Cómo llegar?</h4>
 						<p class="">Solo tienes que tomar el desvió desde la pista principal de Echarati a la altura de Pacchac,  de ahí se realiza una caminata de 10 minutos aproximadamente.</p>
                     </div>
-                    <a href="../img/mini-destinos/7-tinajas/fotos/2.jpg" class="btn-popup map-gal">ver mapa</a>
+                    <a href="../img/mapas/mapa-cañon-pacchac.jpg" class="btn-popup map-gal">ver mapa</a>
                 </div>
                 <div class="top-border">
                     <figure class="figure">
@@ -160,7 +136,7 @@
 						<h4 class=" py-4">¿Cómo llegar?</h4>
 						<p class="text-thumb">A tan solo 30 min de la ciudad de Quillabamba se toma el desvió de la via principal hacia  Villa Rica. 5 minutos antes de Pacchac.</p>
                     </div>
-                    <a href="../img/mini-destinos/7-tinajas/fotos/2.jpg" class="btn-popup map-gal">ver mapa</a>
+                    <a href="../img/mapas/catarata Villa Rica.jpg" class="btn-popup map-gal">ver mapa</a>
                 </div>
                 <div class="top-border">
                     <figure class="figure">
@@ -175,7 +151,7 @@
 						<h4 class="py-4">¿Cómo llegar?</h4>
 						<p class="text-thumb">Llegar a ella te tomara 20 minutos desde la ciudad de Quillabamba. Solo tienes que llegar al Centro Poblado de Huayllayoc y de ahí recorrer una caminata de 10 minutos.</p>
                     </div>
-                    <a href="../img/mini-destinos/7-tinajas/fotos/2.jpg" class="btn-popup map-gal">ver mapa</a>
+                    <a href="../img/mapas/huayllayoc mapa.jpg" class="btn-popup map-gal">ver mapa</a>
                 </div>
                 <div class="questions my-5">
                     <h4 class="questions-text">¿Conoces otros lugares ocultos de Quillabamba que debiésemos incorporar a esta lista? ¡Deja tu recomendación en la caja de comentarios!</h4>
@@ -184,9 +160,9 @@
                     <div class="fb-comments" data-href="https://destinosquillabamba.com/destinos-ocultos" data-width="" data-numposts="5"></div>
             </div>
             <div class="col-md-4">
-                <div class="mt-5 mb-4 py-5">
+                <!-- <div class="mt-5 mb-4 py-5">
                     <div class="fb-page" data-href="https://www.facebook.com/DestinosQuillabamba/" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/DestinosQuillabamba/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/DestinosQuillabamba/">Destinos Quillabamba</a></blockquote></div>
-                </div>
+                </div> -->
                 <hr>
                 <div class="single-side-bar mt-5">
                     <h4 class="popular-title">Destinos Populares</h4>
@@ -231,6 +207,30 @@
         </div>
     </div>
 </section>
+  <!-- Modal -->
+  <div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+          <div class="modal-header">
+              <h4 class="modal-title w-100" id="myModalLabel">El Clima en Quillabamba, La Convención</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+                  <a class="weatherwidget-io" href="https://forecast7.com/es/n13d52n71d99/santa-ana/?unit=us" data-label_1="Santa Ana" data-label_2="Quillabamba" data-theme="original" >Santa Ana Quillabamba</a>
+                  <script>
+                  !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+                  </script>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+          </div>
+          </div>
+      </div>
+  </div>
+<!-- End modal -->
 <!-- start footer -->
 <footer class="footer">
 	<div class="container">
