--- a/blog.html
+++ b/blog.html
@@ -14,8 +14,7 @@
   	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/component.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
-	<!-- <link rel="stylesheet" href="css/animate.css"> -->
-	<link rel="stylesheet" href="css/aos.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/flaticon.css">
   	<link rel="stylesheet" href="css/icomoon.css">
   	<link rel="stylesheet" href="css/sal.css">
@@ -82,7 +81,7 @@
 	<section class="content_blog" id="content_blog">
 		<div class="container">
 			<div class="row d-flex">
-				<div class="col-md-4 d-flex" data-aos="fade-up">
+				<div class="col-md-4 d-flex wow fadeInUp">
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
 							<a href="blog-single/destinos-ocultos.html"><img src="img/destination.jpg" class="img" alt=""></a>
@@ -99,7 +98,7 @@
 						</div> -->
 					</div>
 				</div>
-				<div class="col-md-4 d-flex" data-aos="fade-up" data-aos-delay="50" data-aos-duration="1000"> 
+				<div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="1.5s" data-wow-dealy="2.5s"> 
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
 							<a href="blog-single/3-piscinas.html"><img src="img/destination.jpg" class="img" alt=""></a>
@@ -116,7 +115,7 @@
 						</div> -->
 					</div>
 				</div>
-				<div class="col-md-4 d-flex" data-aos="fade-up" data-aos-delay="70" data-aos-duration="1200" data-aos-mirror="true" data-aos-once="false">
+				<div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="2s" data-wow-dealy="3s">
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
 							<a href=""><img src="img/destination.jpg" class="img" alt=""></a>
@@ -133,7 +132,7 @@
 						</div> -->
 					</div>
 				</div>
-				<div class="col-md-4 d-flex">
+				<div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="2.5s" data-wow-dealy="3.5s">
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
 							<a href=""><img src="img/destination.jpg" class="img" alt=""></a>
@@ -150,7 +149,7 @@
 						</div> -->
 					</div>
 				</div>
-				<div class="col-md-4 d-flex">
+				<div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="3s" data-wow-dealy="4s">
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
 							<a href=""><img src="img/destination.jpg" class="img" alt=""></a>
@@ -167,7 +166,7 @@
 						</div> -->
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="3.5s" data-wow-dealy="4.5s">
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
 							<a href=""><img src="img/destination.jpg" class="img" alt=""></a>
@@ -187,37 +186,61 @@
 			</div>
 		</div>
 	</section>
-	<!-- Staert blog -->
+	<!-- End blog -->
+	<!-- Modal -->
+    <div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title w-100" id="myModalLabel">El Clima en Quillabamba, La Convención</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                    <a class="weatherwidget-io" href="https://forecast7.com/es/n13d52n71d99/santa-ana/?unit=us" data-label_1="Santa Ana" data-label_2="Quillabamba" data-theme="original" >Santa Ana Quillabamba</a>
+                    <script>
+                    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+                    </script>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+    </div>
+    <!-- End modal -->
 	<!-- Start Footer -->
 	<footer class="footer">
 			<div class="container">
 				<div class="row">
 					<div class="col-6 col-sm-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-						<div class="footer_contact_icon"><img src="img/svg/suitcase-1.svg" alt=""></div>
+						<div class="footer_contact_icon"><img src="img/svg/suitcase-1.svg" alt="icon-suitcase"></div>
 						<div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
 						<div class="footer_contact_btn">
 							<a href="#!" class="primary-btn" >Leer más</a>
 						</div>
 					</div>
 					<div class="col-6 col-sm-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-						<div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt=""></div>
-						<div class="footer_contact_title"><h2>como llegar  <br> a tus destinos</h2></div>
+						<div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt="icon-placeholder"></div>
+						<div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
 						<div class="footer_contact_btn">
 							<a href="#!" class="primary-btn" >Leer más</a>
 						</div>
 					</div>
 					<div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-						<div class="footer_contact_icon"><img src="img/svg/sun.svg" alt=""></div>
+						<div class="footer_contact_icon"><img src="img/svg/sun.svg" alt="icon-sun"></div>
 						<div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
 						<div class="footer_contact_btn">
-							<a href="#!" class="primary-btn" >Leer más</a>
+							<a href=""  data-toggle="modal" data-target="#centralModalSm" class="primary-btn" >Leer más</a>
 						</div>
 					</div>
 				</div>
 				<div class="row footer_info">
 					<div class="col-12 col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center text-center">
 						<div class="footer_dest text-center">
-							<div class="dest_logo"><img src="img/logo/Recurso 2.png" alt=""></div>
+							<div class="dest_logo"><img src="img/logo/Recurso 2.png" alt="logotipo-destinos-quillabamba"></div>
 							<h2 class="title_dest mt-3">Destinos Quillabamba</h2>
 						</div>
 					</div>
@@ -257,9 +280,8 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/mdb.min.js"></script>
 	<script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
-	<!-- <script type="text/javascript" src="js/wow.min.js"></script> -->
+	<script type="text/javascript" src="js/wow.min.js"></script>
 	<script type="text/javascript" src="js/sal.js"></script>
-	<script type="text/javascript" src="js/aos.js"></script>
 	<script type="text/javascript" src="js/scrollax.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/new.js"></script>
