--- a/destinos.html
+++ b/destinos.html
@@ -59,10 +59,10 @@
 		</nav>
 		<div class="site-cover overlay" style="background-image: url(img/hero_bg_1.jpg); background-attachment: fixed;">
 			<div class="container">
-				<div class="row align-items-center justify-content-center text-center">
-					<div class="col-md-8">
-						<h1 class="text-white">DESTINOS</h1>
-						<div><a href="index.html">Inicio</a> <span class="mx-2 text-white">&bullet;</span> <span class="text-white">Destinos</span></div>
+				<div class="row align-items-center justify-content-center text-center" data-scrollax-parent="true">
+					<div class="col-md-8"  data-scrollax=" properties: { translateY: '70%' }">
+						<h1 class="text-white"  data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">DESTINOS</h1>
+						<div data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="index.html">Inicio</a> <span class="mx-2 text-white">&bullet;</span> <span class="text-white">Destinos</span></div>
 					</div>
 				</div>
 			</div>
@@ -114,11 +114,11 @@
 				<div class="col-md-3 wow bounceInUp">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/destination.jpg" class="img-fluid" alt="">
+							<img src="img/destination.jpg" class="img-fluid" alt="Chichima-miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">$400</h4>
-							<a href="destinos/D-7tinajas.html">
+							<h4 class="price">treking</h4>
+							<a href="destinos/D-ATChichima.html">
 								<h3 class="text-center py-2">Atardecer de Chichima</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
@@ -131,16 +131,16 @@
 				<div class="col-md-3 animated wow bounceInUp" data-wow-duration="2s" data-wow-dealy="5s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/destination.jpg" class="img-fluid" alt="">
+							<img src="img/mini-destinos/abra-malaga-dia/miniatura/miniatura-abra-malaga.jpg" class="img-fluid" alt="abra-malaga-miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">$400</h4>
-							<a href="">
-								<h3 class="text-center py-2">Atardecer de Chichima</h3>
+							<!-- <h4 class="price">$400</h4> -->
+							<a href="destinos/D-AbraMalaga.html">
+								<h3 class="text-center py-2">Abra Malaga</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/destination.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/abra-malaga-dia/miniatura/miniatura-abra-malaga.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -148,16 +148,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="3s" data-wow-dealy="6s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/destination.jpg" class="img-fluid" alt="">
+							<img src="img/mini-destinos/alfamayo/miniatura/miniaturas-de-destinos.jpg" class="img-fluid" alt="alfamayo-miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">$400</h4>
-							<a href="">
+							<!-- <h4 class="price">$400</h4> -->
+							<a href="destinos/D-Alfamayo.html">
 								<h3 class="text-center py-2">Atardecer de Chichima</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/destination.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/alfamayo/miniatura/miniaturas-de-destinos.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -165,16 +165,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="4s" data-wow-dealy="7s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/destination.jpg" class="img-fluid" alt="">
+							<img src="img/mini-destinos/amanecer-en-torontoy/miniaturas/miniaturas-de-destinos-torontoy.jpg" class="img-fluid" alt="amancer-torontoy-miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">$400</h4>
-							<a href="">
-								<h3 class="text-center py-2">Atardecer de Chichima</h3>
+							<!-- <h4 class="price">$400</h4> -->
+							<a href="destinos/D-AmanecerTorontoy.html">
+								<h3 class="text-center py-2">Amanecer en Torontoy</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/destination.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/amanecer-en-torontoy/miniaturas/miniaturas-de-destinos-torontoy.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -182,16 +182,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="2s" data-wow-dealy="5s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/destination.jpg" class="img-fluid" alt="">
+							<img src="img/mini-destinos/Aputinya/miniatura/miniaturas-de-destinos-Aputinya.jpg" class="img-fluid" alt="-aputinya-miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">$400</h4>
-							<a href="">
-								<h3 class="text-center py-2">Atardecer de Chichima</h3>
+							<!-- <h4 class="price">$400</h4> -->
+							<a href="destinos/D-Aputinya.html">
+								<h3 class="text-center py-2">Aputinya</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/destination.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Aputinya/miniatura/miniaturas-de-destinos-Aputinya.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -199,16 +199,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="3s" data-wow-dealy="6s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/destination.jpg" class="img-fluid" alt="">
+							<img src="img/mini-destinos/Catarata-Villa-Rica/Miniatura/miniaturas-de-destinos-villa-rica.jpg" class="img-fluid" alt="villa-Rica-miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">$400</h4>
-							<a href="">
-								<h3 class="text-center py-2">Atardecer de Chichima</h3>
+							<!-- <h4 class="price">$400</h4> -->
+							<a href="destinos/D-CVillaRica.html">
+								<h3 class="text-center py-2">Villa Rica</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/destination.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Catarata-Villa-Rica/Miniatura/miniaturas-de-destinos-villa-rica.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -216,16 +216,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="4s" data-wow-dealy="7s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/destination.jpg" class="img-fluid" alt="">
+							<img src="img/mini-destinos/Illapani/miniatura/miniaturas-de-destinos-Illapani.jpg" class="img-fluid" alt="Illapani-miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">$400</h4>
-							<a href="">
-								<h3 class="text-center py-2">Atardecer de Chichima</h3>
+							<!-- <h4 class="price">$400</h4> -->
+							<a href="destinos/D-CatartaIllapani.html">
+								<h3 class="text-center py-2">Illapani</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/destination.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Illapani/miniatura/miniaturas-de-destinos-Illapani.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -233,16 +233,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="4.5s" data-wow-dealy="5.5s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/destination.jpg" class="img-fluid" alt="">
+							<img src="img/mini-destinos/Chaupimayo-B/miniatura/miniaturas-de-destinos-Chaupimayo-b.jpg" class="img-fluid" alt="chaupimayo-miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">$400</h4>
-							<a href="">
-								<h3 class="text-center py-2">Atardecer de Chichima</h3>
+							<!-- <h4 class="price">$400</h4> -->
+							<a href="destinos/D-Chaupimayo.html">
+								<h3 class="text-center py-2">Chaupimayo B</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/destination.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Chaupimayo-B/miniatura/miniaturas-de-destinos-Chaupimayo-b.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -250,16 +250,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="2s" data-wow-dealy="5s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/destination.jpg" class="img-fluid" alt="">
+							<img src="img/mini-destinos/Chinche-Maranura/Miniatura/miniaturas-de-destinos-Chinche.jpg" class="img-fluid" alt="chinche-maranura-miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">$400</h4>
-							<a href="">
-								<h3 class="text-center py-2">Atardecer de Chichima</h3>
+							<!-- <h4 class="price">$400</h4> -->
+							<a href="destinos/D-ChincheM.html">
+								<h3 class="text-center py-2">Chinche Maranura</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/destination.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Chinche-Maranura/Miniatura/miniaturas-de-destinos-Chinche.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -267,16 +267,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="3s" data-wow-dealy="6s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/destination.jpg" class="img-fluid" alt="">
+							<img src="img/mini-destinos/Echarati/Miniatura/miniaturas-de-destinos-echarati.jpg" class="img-fluid" alt="echarati-miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">$400</h4>
-							<a href="">
-								<h3 class="text-center py-2">Atardecer de Chichima</h3>
+							<!-- <h4 class="price">$400</h4> -->
+							<a href="destinos/D-Echarati.html">
+								<h3 class="text-center py-2">Echarati</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/destination.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Echarati/Miniatura/miniaturas-de-destinos-echarati.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -284,16 +284,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="4s" data-wow-dealy="7s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/destination.jpg" class="img-fluid" alt="">
+							<img src="img/mini-destinos/Forestación-Chichima/miniatura/miniaturas-de-destinos-chichima.jpg" class="img-fluid" alt="forestacion-chichima-miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">$400</h4>
-							<a href="">
-								<h3 class="text-center py-2">Atardecer de Chichima</h3>
+							<!-- <h4 class="price">$400</h4> -->
+							<a href="destinos/D-ForestacionChichima.html">
+								<h3 class="text-center py-2">Forestación Chichima</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/destination.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Forestación-Chichima/miniatura/miniaturas-de-destinos-chichima.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -301,16 +301,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="4.5s" data-wow-dealy="5.5s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/destination.jpg" class="img-fluid" alt="">
+							<img src="img/mini-destinos/huayllayoc/Miniatura/miniaturas-de-destinos-Huayllayoc.jpg" class="img-fluid" alt="Huayllayoc-miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">$400</h4>
-							<a href="">
-								<h3 class="text-center py-2">Atardecer de Chichima</h3>
+							<!-- <h4 class="price">$400</h4> -->
+							<a href="destinos/D-Huayllayoc.html">
+								<h3 class="text-center py-2">huayllayoc</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/destination.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/huayllayoc/Miniatura/miniaturas-de-destinos-Huayllayoc.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -331,20 +331,44 @@
 			</div>
 		</div>
 	</section>
+	<!-- Modal -->
+    <div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title w-100" id="myModalLabel">El Clima en Quillabamba, La Convención</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                    <a class="weatherwidget-io" href="https://forecast7.com/es/n13d52n71d99/santa-ana/?unit=us" data-label_1="Santa Ana" data-label_2="Quillabamba" data-theme="original" >Santa Ana Quillabamba</a>
+                    <script>
+                    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+                    </script>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+    </div>
+    <!-- End modal -->
 <!-- Start Footer -->
 <footer class="footer">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+			<div class="col-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
 				<div class="footer_contact_icon"><img src="img/svg/suitcase-1.svg" alt="icono-img-suicate"></div>
 				<div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
 				<div class="footer_contact_btn">
 					<a href="#!" class="primary-btn" >Leer más</a>
 				</div>
 			</div>
-			<div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+			<div class="col-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
 				<div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt="icono-img-placeholder"></div>
-				<div class="footer_contact_title"><h2>como llegar  <br> a tus destinos</h2></div>
+				<div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
 				<div class="footer_contact_btn">
 					<a href="#!" class="primary-btn" >Leer más</a>
 				</div>
@@ -353,7 +377,7 @@
 				<div class="footer_contact_icon"><img src="img/svg/sun.svg" alt="icono-img-sun"></div>
 				<div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
 				<div class="footer_contact_btn">
-					<a href="#!" class="primary-btn" >Leer más</a>
+					<a href=""  data-toggle="modal" data-target="#centralModalSm" class="primary-btn" >Leer más</a>
 				</div>
 			</div>
 		</div>
@@ -404,6 +428,7 @@
 	<script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
 	<script type="text/javascript" src="js/sal.js"></script>
 	<script type="text/javascript" src="js/wow.min.js"></script>
+	<script type="text/javascript" src="js/scrollax.js"></script>
 	<script type="text/javascript" src="js/new.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
