--- a/destinos/D-AbraMalaga.html
+++ b/destinos/D-AbraMalaga.html
@@ -51,6 +51,12 @@
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
 			<div class="container">
+                <div class="navbar-brand">
+                    <a  href="../index.html">
+                        <img src="../img/logo/LOGO BLANCO .png" class="img-fluid" alt="">
+                    </a>
+                </div>
+                
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 				aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -66,16 +72,14 @@
 						<li class="nav-item">
 							<a class="nav-link" href="../galeria.html">Galeria</a>
 						</li>
-						<a href="../index.html">
-							<div class="logo">
-								<img src="../img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="logo-destinos-quillabamba">
-							</div>
-                        </a>
+						<div class="logo">
+                            <a href="../index.html"><img src="../img/logo/vive disfruta viaja_1.png" alt="logo-destinos-quillabamba"></a>
+						</div>
                         <li class="nav-item">
                             <a class="nav-link" href="../videos.html">Videos</a>
                         </li>
 						<li class="nav-item">
-							<a class="nav-link" href="../blog.html">Blog</a>
+					        <a class="nav-link" href="../blog.html">Blog</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="../contacto.html">contacto</a>
@@ -188,14 +192,14 @@
     <footer class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="col-6 col-sm-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
                         <div class="footer_contact_icon"><img src="../img/svg/suitcase-1.svg" alt="icono-suitcase-img"></div>
                         <div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
                         <div class="footer_contact_btn">
                             <a href="#!" class="primary-btn" >Leer más</a>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="col-6 col-sm-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
                         <div class="footer_contact_icon"><img src="../img/svg/placeholder.svg" alt="icono-location-img"></div>
                         <div class="footer_contact_title"><h2>como llegar  <br> a tus destinos</h2></div>
                         <div class="footer_contact_btn">
