--- a/galeria.html
+++ b/galeria.html
@@ -62,7 +62,7 @@
 		<div class="site-cover overlay" style="background-image: url(img/hero_bg_3.jpg); background-attachment: fixed;">
 			<div class="container">
 				<div class="row align-items-center justify-content-center text-center" data-scrollax-parent="true">
-					<div class="col-md-8" data-scrollax=" properties: { translateY: '70%' }">
+					<div class="col-md-8 text-banner" data-scrollax=" properties: { translateY: '70%' }">
 						<h1 class="text-white text-uppercase" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">galeria</h1>
 						<div data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="index.html">Inicio</a> <span class="mx-2 text-white">&bullet;</span> <span class="text-white">Galeria</span></div>
 					</div>
@@ -96,37 +96,60 @@
         </div>
     </section>
     <!-- End Galeria -->
-
+    <!-- Modal -->
+    <div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title w-100" id="myModalLabel">El Clima en Quillabamba, La Convención</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                    <a class="weatherwidget-io" href="https://forecast7.com/es/n13d52n71d99/santa-ana/?unit=us" data-label_1="Santa Ana" data-label_2="Quillabamba" data-theme="original" >Santa Ana Quillabamba</a>
+                    <script>
+                    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+                    </script>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+    </div>
+<!-- End modal -->
     <!-- Start footer -->
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-                    <div class="footer_contact_icon"><img src="img/svg/suitcase-1.svg" alt=""></div>
+                <div class="col-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="img/svg/suitcase-1.svg" alt="icon-suitcase"></div>
                     <div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
                     <div class="footer_contact_btn">
                         <a href="#!" class="primary-btn" >Leer más</a>
                     </div>
                 </div>
-                <div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-                    <div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt=""></div>
-                    <div class="footer_contact_title"><h2>como llegar  <br> a tus destinos</h2></div>
+                <div class="col-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt="icon-placeholder"></div>
+                    <div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
                     <div class="footer_contact_btn">
                         <a href="#!" class="primary-btn" >Leer más</a>
                     </div>
                 </div>
-                <div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-                    <div class="footer_contact_icon"><img src="img/svg/sun.svg" alt=""></div>
+                <div class="col-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="img/svg/sun.svg" alt="icon-sun"></div>
                     <div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
                     <div class="footer_contact_btn">
-                        <a href="#!" class="primary-btn" >Leer más</a>
+                        <a href=""  data-toggle="modal" data-target="#centralModalSm" class="primary-btn" >Leer más</a>
                     </div>
                 </div>
             </div>
             <div class="row footer_info">
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center text-center">
                     <div class="footer_dest text-center">
-                        <div class="dest_logo"><img src="img/logo/Recurso 2.png" alt=""></div>
+                        <div class="dest_logo"><img src="img/logo/Recurso 2.png" alt="logotipo-destinos-quillabamba"></div>
                         <h2 class="title_dest mt-3">Destinos Quillabamba</h2>
                     </div>
                 </div>
