cambiando a rama DestinosV2

--- a/index.html
+++ b/index.html
@@ -505,21 +505,28 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3">
-				<div class="img">
+			<div class="col-md-3 col-logo d-flex flex-column align-items-center justify-content-center">
+				<div class="logo-footer">
 					<img src="img/logo/Recurso 2.png" alt="">
 					<h2>Destinos Quillabamba</h2>
 				</div>
 			</div>
-			<div class="col-md-3">
-				<div class="img">
+			<div class="col-md-3 col-slogan d-flex align-items-center">
+				<div class="slogan-footer">
 					<img src="img/logo/vive disfruta viaja_1.png" alt="">
 				</div>
 			</div>
-			<div class="col-md-3">
-				
+			<div class="col-md-3 col-social-list d-flex align-items-center">
+				<div class="col d-flex justify-content-center">
+					<ul class="footer_social list-unstyled float-md-left float-lft">
+						<li class="social_animate"><a class="icon-1" href="#"><span class="icon-twitter"></span></a></li>
+						<li class="social_animate"><a class="icon-2" href="#"><span class="icon-facebook"></span></a></li>
+						<li class="social_animate"><a class="icon-3" href="#"><span class="icon-instagram"></span></a></li>
+						<li class="social_animate"><a class="icon-4" href="#"><span class="icon-youtube"></span></a></li>
+					</ul>
+				</div>
 			</div>
-			<div class="col-12 col-sm-12 col-md-3 col-lg-3 footer_info_questions d-flex align-items-center justify-content-center">
+			<div class="col-12 col-sm-12 col-md-3 col-lg-3 col_info_questions d-flex align-items-center justify-content-center">
 					<div class="questions_footer">
 						<h3>¿tienes alguna pregunta?</h3>
 						<div class="questions_icon">
