probar nuevo cambio en el fondo de inicio

--- a/index.html
+++ b/index.html
@@ -453,14 +453,14 @@
 <section class="bg-footer overlay"  style="background-image: url(img/hero_bg_1.jpg);">
 	<div class="container">
 		<div class="row row_contact">
-			<div class="col-12 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+			<div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
 				<div class="footer_contact_icon"><img src="img/svg/suitcase-1.svg" alt=""></div>
 				<div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
 				<div class="footer_contact_btn">
 					<a href="#!" class="primary-btn" >Leer más</a>
 				</div>
 			</div>
-			<div class="col-12 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+			<div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
 				<div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt=""></div>
 				<div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
 				<div class="footer_contact_btn">
@@ -505,46 +505,45 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3 col-logo d-flex flex-column align-items-center justify-content-center">
-				<div class="logo-footer">
-					<img src="img/logo/Recurso 2.png" alt="">
-					<h2>Destinos Quillabamba</h2>
+			<div class="col-6 col-sm-6 col-md-3 col-logo d-flex flex-column align-items-center justify-content-center">
+				<div class="footer_dest text-center">
+					<div class="logo-footer"><img src="img/logo/Recurso 2.png" alt=""></div>
+					<h2 class="title-logo mt-3">Destinos Quillabamba</h2>
 				</div>
 			</div>
-			<div class="col-md-3 col-slogan d-flex align-items-center">
-				<div class="slogan-footer">
-					<img src="img/logo/vive disfruta viaja_1.png" alt="">
+			<div class="col-6 col-sm-6 col-md-3 col-slogan d-flex align-items-center justify-content-center">
+				<div class="footer_dest text-center">
+					<div class="slogan-footer"><img src="img/logo/vive disfruta viaja_1.png" alt=""></div>
 				</div>
 			</div>
-			<div class="col-md-3 col-social-list d-flex align-items-center">
-				<div class="col d-flex justify-content-center">
-					<ul class="footer_social list-unstyled float-md-left float-lft">
-						<li class="social_animate"><a class="icon-1" href="#"><span class="icon-twitter"></span></a></li>
-						<li class="social_animate"><a class="icon-2" href="#"><span class="icon-facebook"></span></a></li>
-						<li class="social_animate"><a class="icon-3" href="#"><span class="icon-instagram"></span></a></li>
-						<li class="social_animate"><a class="icon-4" href="#"><span class="icon-youtube"></span></a></li>
-					</ul>
-				</div>
+			<div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
+				<h3>Encuentranos en</h3>
+				<ul class="footer_social list-unstyled">
+					<li class="social_animate"><a class="icon-1" href="#"><span class="icon-twitter"></span></a></li>
+					<li class="so0cial_animate"><a class="icon-2" href="#"><span class="icon-facebook"></span></a></li>
+					<li class="social_animate"><a class="icon-3" href="#"><span class="icon-instagram"></span></a></li>
+					<li class="social_animate"><a class="icon-4" href="#"><span class="icon-youtube"></span></a></li>
+				</ul>
 			</div>
-			<div class="col-12 col-sm-12 col-md-3 col-lg-3 col_info_questions d-flex align-items-center justify-content-center">
-					<div class="questions_footer">
-						<h3>¿tienes alguna pregunta?</h3>
-						<div class="questions_icon">
-							<ul>
-								<li><span class="icon icon-location2"></span>
-									<span class="text">Av. Bolgnesi. <br>
-										Quillabamba, Cusco, Perú</span>
-								</li>
-								<li><span class="icon icon-phone"></span>
-									<span class="text">+51 986-571790</span>
-								</li>
-								<li><span class="icon icon-mail2"></span>
-									<span class="text">info@destinosquillabamba.com</span>
-								</li>
-							</ul>
-						</div>
+			<div class="col-12 col-sm-12 col-md-3 col-lg-3 col_info_questions d-flex justify-content-center">
+				<div class="questions_footer">
+					<h3>¿tienes alguna pregunta?</h3>
+					<div class="questions_icon">
+						<ul>
+							<li><span class="icon icon-location2"></span>
+								<span class="text">Av. Bolgnesi. <br>
+									Quillabamba, Cusco, Perú</span>
+							</li>
+							<li><span class="icon icon-phone"></span>
+								<span class="text">+51 986-571790</span>
+							</li>
+							<li><span class="icon icon-mail2"></span>
+								<span class="text">info@destinosquillabamba.com</span>
+							</li>
+						</ul>
 					</div>
 				</div>
+			</div>
 		</div>
 	</div>
 </footer>
