--- a/blog.html
+++ b/blog.html
@@ -67,13 +67,6 @@
 						<div data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="index.html">Inicio</a> <span class="mx-2 text-white">&bullet;</span> <span class="text-white">Destinos</span></div>
 					</div>
 				</div>
-				<div class="row">
-                    <div class="container">
-                        <div class="col">
-                            <button type="button" class="scroll_down" id="scroll_down"></button>
-                        </div>
-                    </div>
-                </div>
 			</div>
 		</div>
 	</header>
@@ -212,40 +205,30 @@
     </div>
     <!-- End modal -->
 	<!-- Start Footer -->
-	<footer class="footer">
+	<footer>
 			<div class="container">
 				<div class="row">
-					<div class="col-6 col-sm-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-						<div class="footer_contact_icon"><img src="img/svg/suitcase-1.svg" alt="icon-suitcase"></div>
-						<div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
-						<div class="footer_contact_btn">
-							<a href="#!" class="primary-btn" >Leer más</a>
-						</div>
-					</div>
-					<div class="col-6 col-sm-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-						<div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt="icon-placeholder"></div>
-						<div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
-						<div class="footer_contact_btn">
-							<a href="#!" class="primary-btn" >Leer más</a>
-						</div>
-					</div>
-					<div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-						<div class="footer_contact_icon"><img src="img/svg/sun.svg" alt="icon-sun"></div>
-						<div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
-						<div class="footer_contact_btn">
-							<a href=""  data-toggle="modal" data-target="#centralModalSm" class="primary-btn" >Leer más</a>
-						</div>
-					</div>
-				</div>
-				<div class="row footer_info">
-					<div class="col-12 col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center text-center">
+					<div class="col-6 col-sm-6 col-md-3 col-logo d-flex flex-column align-items-center justify-content-center">
 						<div class="footer_dest text-center">
-							<div class="dest_logo"><img src="img/logo/Recurso 2.png" alt="logotipo-destinos-quillabamba"></div>
-							<h2 class="title_dest mt-3">Destinos Quillabamba</h2>
+							<div class="logo-footer"><img src="img/logo/Recurso 2.png" alt=""></div>
+							<h2 class="title-logo mt-3">Destinos Quillabamba</h2>
 						</div>
 					</div>
-					<div class="col-12 col-sm-12 col-md-4 col-lg-4"></div>
-					<div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_info_questions d-flex align-items-center justify-content-center">
+					<div class="col-6 col-sm-6 col-md-3 col-slogan d-flex align-items-center justify-content-center">
+						<div class="footer_dest text-center">
+							<div class="slogan-footer"><img src="img/logo/vive disfruta viaja_1.png" alt=""></div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
+						<h3>Encuentranos en</h3>
+						<ul class="footer_social list-unstyled">
+							<li class="social_animate"><a class="icon-1" href="#"><span class="icon-twitter"></span></a></li>
+							<li class="so0cial_animate"><a class="icon-2" href="#"><span class="icon-facebook"></span></a></li>
+							<li class="social_animate"><a class="icon-3" href="#"><span class="icon-instagram"></span></a></li>
+							<li class="social_animate"><a class="icon-4" href="#"><span class="icon-youtube"></span></a></li>
+						</ul>
+					</div>
+					<div class="col-12 col-sm-12 col-md-3 col-lg-3 col_info_questions d-flex justify-content-center">
 						<div class="questions_footer">
 							<h3>¿tienes alguna pregunta?</h3>
 							<div class="questions_icon">
@@ -262,13 +245,6 @@
 									</li>
 								</ul>
 							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row py-4">
-					<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-						<div class="d-flex justify-content-center align-items-center text-center">
-							<p class="text-white">Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos Los derechos reservados | Destinos Quillabamba <i class="icon-heart-o" aria-hidden="true"></i></p>
 						</div>
 					</div>
 				</div>
