--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 
 		<!-- Links -->
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-
 			<ul class="navbar-nav m-auto d-flex align-items-center">
 				<li class="nav-item">
 					<a class="nav-link" href="nosotros.html">nosotros</a>
@@ -531,7 +530,7 @@
 					<div class="questions_icon">
 						<ul>
 							<li><span class="icon icon-location2"></span>
-								<span class="text">Av. Bolgnesi. <br>
+								<span class="text">Av. Bolognesi. <br>
 									Quillabamba, Cusco, Perú</span>
 							</li>
 							<li><span class="icon icon-phone"></span>
