--- a/paquetes/tour-3.html
+++ b/paquetes/tour-3.html
@@ -355,7 +355,7 @@
                     <div class="questions_icon">
                         <ul>
                             <li><span class="icon icon-location2"></span>
-                                <span class="text">Av. Bolgnesi. <br>
+                                <span class="text">Av. Bolognesi. <br>
                                     Quillabamba, Cusco, Perú</span>
                             </li>
                             <li><span class="icon icon-phone"></span>
