--- a/blog.html
+++ b/blog.html
@@ -23,9 +23,14 @@
 </head>
 <body>
 	<!-- Start header -->
-	<header>
+	<header class="site-cover overlay" style="background-image: url(img/hero_bg_1.jpg); background-attachment: fixed;">
 		<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
 			<div class="container">
+				<div class="navbar-brand">
+					<a  href="index.html">
+						<img src="img/logo/LOGO BLANCO .png" class="img-fluid" alt="logo destinos Quillabamba">
+					</a>
+				</div>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 				aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -41,11 +46,11 @@
 						<li class="nav-item">
 							<a class="nav-link" href="galeria.html">Galeria</a>
 						</li>
-						<a href="index.html">
-							<div class="logo">
+						<div class="logo">
+							<a href="index.html">
 								<img src="img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="">
-							</div>
-						</a>
+							</a>
+						</div>
 						<li class="nav-item">
 							<a class="nav-link" href="videos.html">Videos</a>
 						</li>
@@ -59,7 +64,7 @@
 				</div>
 			</div>
 		</nav>
-		<div class="site-cover overlay" style="background-image: url(img/hero_bg_1.jpg); background-attachment: fixed;">
+		<div>
 			<div class="container">
 				<div class="row align-items-center justify-content-center text-center" data-scrollax-parent="true">
 					<div class="col-md-8" data-scrollax="properties: { translateY: '70%' }">
@@ -180,6 +185,33 @@
 		</div>
 	</section>
 	<!-- End blog -->
+	<section class="bg-footer overlay"  style="background-image: url(img/hero_bg_1.jpg);">
+		<div class="container">
+			<div class="row row_contact">
+				<div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+					<div class="footer_contact_icon"><img src="img/svg/suitcase-1.svg" alt=""></div>
+					<div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
+					<div class="footer_contact_btn">
+						<a href="#!" class="primary-btn" >Leer más</a>
+					</div>
+				</div>
+				<div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+					<div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt=""></div>
+					<div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
+					<div class="footer_contact_btn">
+						<a href="#!" class="primary-btn" >Leer más</a>
+					</div>
+				</div>
+				<div class="col-12 col-sm-12 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+					<div class="footer_contact_icon"><img src="img/svg/sun.svg" alt=""></div>
+					<div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
+					<div class="footer_contact_btn">
+						<a href=""  data-toggle="modal" data-target="#centralModalSm" class="primary-btn" >Leer más</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- Modal -->
     <div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
     aria-hidden="true">
@@ -206,50 +238,50 @@
     <!-- End modal -->
 	<!-- Start Footer -->
 	<footer>
-			<div class="container">
-				<div class="row">
-					<div class="col-6 col-sm-6 col-md-3 col-logo d-flex flex-column align-items-center justify-content-center">
-						<div class="footer_dest text-center">
-							<div class="logo-footer"><img src="img/logo/Recurso 2.png" alt=""></div>
-							<h2 class="title-logo mt-3">Destinos Quillabamba</h2>
-						</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-6 col-sm-6 col-md-3 col-logo d-flex flex-column align-items-center justify-content-center">
+					<div class="footer_dest text-center">
+						<div class="logo-footer"><img src="img/logo/Recurso 2.png" alt=""></div>
+						<h2 class="title-logo mt-3">Destinos Quillabamba</h2>
 					</div>
-					<div class="col-6 col-sm-6 col-md-3 col-slogan d-flex align-items-center justify-content-center">
-						<div class="footer_dest text-center">
-							<div class="slogan-footer"><img src="img/logo/vive disfruta viaja_1.png" alt=""></div>
-						</div>
+				</div>
+				<div class="col-6 col-sm-6 col-md-3 col-slogan d-flex align-items-center justify-content-center">
+					<div class="footer_dest text-center">
+						<div class="slogan-footer"><img src="img/logo/vive disfruta viaja_1.png" alt=""></div>
 					</div>
-					<div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
-						<h3>Encuentranos en</h3>
-						<ul class="footer_social list-unstyled">
-							<li class="social_animate"><a class="icon-1" href="#"><span class="icon-twitter"></span></a></li>
-							<li class="so0cial_animate"><a class="icon-2" href="#"><span class="icon-facebook"></span></a></li>
-							<li class="social_animate"><a class="icon-3" href="#"><span class="icon-instagram"></span></a></li>
-							<li class="social_animate"><a class="icon-4" href="#"><span class="icon-youtube"></span></a></li>
-						</ul>
-					</div>
-					<div class="col-12 col-sm-12 col-md-3 col-lg-3 col_info_questions d-flex justify-content-center">
-						<div class="questions_footer">
-							<h3>¿tienes alguna pregunta?</h3>
-							<div class="questions_icon">
-								<ul>
-									<li><span class="icon icon-location2"></span>
-										<span class="text">Av. Bolgnesi. <br>
-											Quillabamba, Cusco, Perú</span>
-									</li>
-									<li><span class="icon icon-phone"></span>
-										<span class="text">+51 986-571790</span>
-									</li>
-									<li><span class="icon icon-mail2"></span>
-										<span class="text">info@destinosquillabamba.com</span>
-									</li>
-								</ul>
-							</div>
+				</div>
+				<div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
+					<h3>Encuentranos en</h3>
+					<ul class="footer_social list-unstyled">
+						<li class="social_animate"><a class="icon-1" href="#"><span class="icon-twitter"></span></a></li>
+						<li class="so0cial_animate"><a class="icon-2" href="#"><span class="icon-facebook"></span></a></li>
+						<li class="social_animate"><a class="icon-3" href="#"><span class="icon-instagram"></span></a></li>
+						<li class="social_animate"><a class="icon-4" href="#"><span class="icon-youtube"></span></a></li>
+					</ul>
+				</div>
+				<div class="col-12 col-sm-12 col-md-3 col-lg-3 col_info_questions d-flex justify-content-center">
+					<div class="questions_footer">
+						<h3>¿tienes alguna pregunta?</h3>
+						<div class="questions_icon">
+							<ul>
+								<li><span class="icon icon-location2"></span>
+									<span class="text">Av. Bolognesi. <br>
+										Quillabamba, Cusco, Perú</span>
+								</li>
+								<li><span class="icon icon-phone"></span>
+									<span class="text">+51 986-571790</span>
+								</li>
+								<li><span class="icon icon-mail2"></span>
+									<span class="text">info@destinosquillabamba.com</span>
+								</li>
+							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
-		</footer>
+		</div>
+	</footer>
 	<!-- End Footer -->
 	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="js/popper.min.js"></script>
