--- a/destinos.html
+++ b/destinos.html
@@ -22,6 +22,7 @@
 </head>
 <body>
 	<!-- header -->
+	<header class="site-cover overlay" style="background-image: url(img/hero_bg_1.jpg); background-attachment: fixed;">
 		<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
 			<div class="container">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -57,7 +58,7 @@
 				</div>
 			</div>
 		</nav>
-		<div class="site-cover overlay" style="background-image: url(img/hero_bg_1.jpg); background-attachment: fixed;">
+		<div>
 			<div class="container">
 				<div class="row align-items-center justify-content-center text-center" data-scrollax-parent="true">
 					<div class="col-md-8"  data-scrollax=" properties: { translateY: '70%' }">
@@ -67,6 +68,7 @@
 				</div>
 			</div>
 		</div>
+	</header>
 	<!-- end header -->
 	<section class="overlap-section">
 		<div class="container">
@@ -385,7 +387,7 @@
                         <div class="questions_icon">
                             <ul>
                                 <li><span class="icon icon-location2"></span>
-                                    <span class="text">Av. Bolgnesi. <br>
+                                    <span class="text">Av. Bolognesi. <br>
                                         Quillabamba, Cusco, Perú</span>
                                 </li>
                                 <li><span class="icon icon-phone"></span>
