--- a/destinos/D-AbraMalagaNoche.html
+++ b/destinos/D-AbraMalagaNoche.html
@@ -48,7 +48,7 @@
 </head>
 <body>
     <!-- Start header -->
-    <header>
+    <header class="site-cover overlay" style="background-image: url(../img/mini-destinos/abra-malaga-nocturna/fotos/2.JPG); background-attachment: fixed; ">
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
 			<div class="container">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -66,11 +66,11 @@
 						<li class="nav-item">
 							<a class="nav-link" href="../galeria.html">Galeria</a>
 						</li>
-						<a href="../index.html">
-							<div class="logo">
-								<img src="../img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="logo-destinos-quillabamba">
-							</div>
-                        </a>
+                        <div class="logo">
+                            <a href="../index.html">
+                                <img src="../img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="logo-destinos-quillabamba">
+                            </a>
+                        </div>
                         <li class="nav-item">
                             <a class="nav-link" href="../videos.html">Videos</a>
                         </li>
@@ -84,20 +84,13 @@
 				</div>
 			</div>
 		</nav>
-		<div class="site-cover overlay" style="background-image: url(../img/mini-destinos/abra-malaga-nocturna/fotos/2.JPG); background-attachment: fixed;">
+		<div>
 			<div class="container">
 				<div class="row align-items-center justify-content-center text-center" data-scrollax-parent="true">
 					<div class="col-8 col-md-8 col-lg-8" data-scrollax=" properties: { translateY: '70%' }">
 						<h1 class="text-white text-uppercase" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Abra Malaga</h1>
 						<div data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="../index.html">inicio</a> <span class="mx-2 text-white">&bullet;</span> <span class="text-white">Destinos</span></div>
 					</div>
-                </div>
-                <div class="row">
-                    <div class="container">
-                        <div class="col">
-                            <button type="button" class="scroll_down" id="scroll_down"></button>
-                        </div>
-                    </div>
                 </div>
 			</div>
 		</div>        
@@ -172,70 +165,104 @@
         </div>
     </section>
     <!-- End info -->
-    <!-- Start Footer -->
-    <footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-                        <div class="footer_contact_icon"><img src="../img/svg/suitcase-1.svg" alt="icono-suitcase-img"></div>
-                        <div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
-                        <div class="footer_contact_btn">
-                            <a href="#!" class="primary-btn" >Leer más</a>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-                        <div class="footer_contact_icon"><img src="../img/svg/placeholder.svg" alt="icono-location-img"></div>
-                        <div class="footer_contact_title"><h2>como llegar  <br> a tus destinos</h2></div>
-                        <div class="footer_contact_btn">
-                            <a href="#!" class="primary-btn" >Leer más</a>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-                        <div class="footer_contact_icon"><img src="../img/svg/sun.svg" alt="icono-clima-img"></div>
-                        <div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
-                        <div class="footer_contact_btn">
-                            <a href="#!" class="primary-btn" >Leer más</a>
-                        </div>
+    <section class="bg-footer overlay"  style="background-image: url(../img/hero_bg_1.jpg);">
+        <div class="container">
+            <div class="row row_contact">
+                <div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="../img/svg/suitcase-1.svg" alt=""></div>
+                    <div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
+                    <div class="footer_contact_btn">
+                        <a href="#!" class="primary-btn" >Leer más</a>
                     </div>
                 </div>
-                <div class="row footer_info">
-                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center text-center">
-                        <div class="footer_dest text-center">
-                            <div class="dest_logo"><img src="../img/logo/Recurso 2.png" alt="logo-tipo-destinos-quillabamba"></div>
-                            <h2 class="title_dest mt-3">Destinos Quillabamba</h2>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-4 col-lg-4"></div>
-                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_info_questions d-flex align-items-center justify-content-center">
-                        <div class="questions_footer">
-                            <h3>¿tienes alguna pregunta?</h3>
-                            <div class="questions_icon">
-                                <ul>
-                                    <li><span class="icon icon-location2"></span>
-                                        <span class="text">Av. Bolgnesi. <br>
-                                            Quillabamba, Cusco, Perú</span>
-                                    </li>
-                                    <li><span class="icon icon-phone"></span>
-                                        <span class="text">+51 986-571790</span>
-                                    </li>
-                                    <li><span class="icon icon-mail2"></span>
-                                        <span class="text">info@destinosquillabamba.com</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+                <div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="../img/svg/placeholder.svg" alt=""></div>
+                    <div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
+                    <div class="footer_contact_btn">
+                        <a href="#!" class="primary-btn" >Leer más</a>
                     </div>
                 </div>
-                <div class="row py-4">
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                        <div class="d-flex justify-content-center align-items-center text-center">
-                            <p class="text-white">Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos Los derechos reservados | Destinos Quillabamba <i class="icon-heart-o" aria-hidden="true"></i></p>
+                <div class="col-12 col-sm-12 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="../img/svg/sun.svg" alt=""></div>
+                    <div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
+                    <div class="footer_contact_btn">
+                        <a href=""  data-toggle="modal" data-target="#centralModalSm" class="primary-btn" >Leer más</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Modal -->
+    <div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title w-100" id="myModalLabel">El Clima en Quillabamba, La Convención</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                    <a class="weatherwidget-io" href="https://forecast7.com/es/n13d52n71d99/santa-ana/?unit=us" data-label_1="Santa Ana" data-label_2="Quillabamba" data-theme="original" >Santa Ana Quillabamba</a>
+                    <script>
+                    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+                    </script>
+              </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+    </div>
+    <!-- End modal -->
+    <!-- start footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-sm-6 col-md-3 col-logo d-flex flex-column align-items-center justify-content-center">
+                    <div class="footer_dest text-center">
+                        <div class="logo-footer"><img src="../img/logo/Recurso 2.png" alt=""></div>
+                        <h2 class="title-logo mt-3">Destinos Quillabamba</h2>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-3 col-slogan d-flex align-items-center justify-content-center">
+                    <div class="footer_dest text-center">
+                        <div class="slogan-footer"><img src="../img/logo/vive disfruta viaja_1.png" alt=""></div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
+                    <h3>Encuentranos en</h3>
+                    <ul class="footer_social list-unstyled">
+                        <li class="social_animate"><a class="icon-1" href="https://twitter.com/DestinosQ" target="_blank"><span class="icon-twitter"></span></a></li>
+                        <li class="so0cial_animate"><a class="icon-2" href="https://www.facebook.com/DestinosQuillabamba/" target="_blank"><span class="icon-facebook"></span></a></li>
+                        <li class="social_animate"><a class="icon-3" href="https://www.instagram.com/destinosQuillabamba/" target="_blank"><span class="icon-instagram"></span></a></li>
+                        <li class="social_animate"><a class="icon-4" href="https://www.youtube.com/channel/UCRfQ0fIHHx4RrjdH5eFfi7Q" target="_blank"><span class="icon-youtube"></span></a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-sm-12 col-md-3 col-lg-3 col_info_questions d-flex justify-content-center">
+                    <div class="questions_footer">
+                        <h3>¿tienes alguna pregunta?</h3>
+                        <div class="questions_icon">
+                            <ul>
+                                <li><span class="icon icon-location2"></span>
+                                    <span class="text">Av. Bolognesi. <br>
+                                        Quillabamba, Cusco, Perú</span>
+                                </li>
+                                <li><span class="icon icon-phone"></span>
+                                    <span class="text">+51 986-571790</span>
+                                </li>
+                                <li><span class="icon icon-mail2"></span>
+                                    <span class="text">info@destinosquillabamba.com</span>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
-        </footer>
-    <!-- End Footer -->
+        </div>
+    </footer>
+    <!-- end footer -->
     <!-- script -->
     <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="../js/popper.min.js"></script>
