--- a/galeria.html
+++ b/galeria.html
@@ -22,7 +22,7 @@
 <body>
 
     <!-- start header -->
-    <header>
+    <header class="site-cover overlay" style="background-image: url(img/hero_bg_3.jpg); background-attachment: fixed;">
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
 			<div class="container">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -59,7 +59,7 @@
 				</div>
 			</div>
 		</nav>
-		<div class="site-cover overlay" style="background-image: url(img/hero_bg_3.jpg); background-attachment: fixed;">
+		<div>
 			<div class="container">
 				<div class="row align-items-center justify-content-center text-center" data-scrollax-parent="true">
 					<div class="col-md-8 text-banner" data-scrollax=" properties: { translateY: '70%' }">
@@ -89,6 +89,33 @@
         </div>
     </section>
     <!-- End Galeria -->
+    <section class="bg-footer overlay"  style="background-image: url(img/hero_bg_1.jpg);">
+        <div class="container">
+            <div class="row row_contact">
+                <div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="img/svg/suitcase-1.svg" alt=""></div>
+                    <div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
+                    <div class="footer_contact_btn">
+                        <a href="#!" class="primary-btn" >Leer más</a>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt=""></div>
+                    <div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
+                    <div class="footer_contact_btn">
+                        <a href="#!" class="primary-btn" >Leer más</a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="img/svg/sun.svg" alt=""></div>
+                    <div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
+                    <div class="footer_contact_btn">
+                        <a href=""  data-toggle="modal" data-target="#centralModalSm" class="primary-btn" >Leer más</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Modal -->
     <div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
     aria-hidden="true">
@@ -143,7 +170,7 @@
                             <div class="questions_icon">
                                 <ul>
                                     <li><span class="icon icon-location2"></span>
-                                        <span class="text">Av. Bolgnesi. <br>
+                                        <span class="text">Av. Bolognesi. <br>
                                             Quillabamba, Cusco, Perú</span>
                                     </li>
                                     <li><span class="icon icon-phone"></span>
