--- a/paquetes/experiencia-1.html
+++ b/paquetes/experiencia-1.html
@@ -39,6 +39,11 @@
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
             <div class="container">
+                <div class="navbar-brand">
+                    <a  href="../index.html">
+                        <img src="../img/logo/LOGO BLANCO .png" class="img-fluid" alt="">
+                    </a>
+                </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -54,11 +59,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../galeria.html">Galeria</a>
                         </li>
-                        <a href="../index.html">
-                            <div class="logo">
+                        <div class="logo">
+                            <a href="../index.html">
                                 <img src="../img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="">
-                            </div>
-                        </a>
+                            </a>
+                        </div>
                         <li class="nav-item">
                             <a class="nav-link" href="../videos.html">Videos</a>
                         </li>
@@ -320,6 +325,60 @@
             </div>
         </div>
     </section>
+    <section class="bg-footer overlay"  style="background-image: url(../img/hero_bg_1.jpg);">
+        <div class="container">
+            <div class="row row_contact">
+                <div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="../img/svg/suitcase-1.svg" alt=""></div>
+                    <div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
+                    <div class="footer_contact_btn">
+                        <a href="#!" class="primary-btn" >Leer más</a>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="../img/svg/placeholder.svg" alt=""></div>
+                    <div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
+                    <div class="footer_contact_btn">
+                        <a href="#!" class="primary-btn" >Leer más</a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="../img/svg/sun.svg" alt=""></div>
+                    <div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
+                    <div class="footer_contact_btn">
+                        <a href=""  data-toggle="modal" data-target="#centralModalSm" class="primary-btn" >Leer más</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bg-footer overlay"  style="background-image: url(../img/hero_bg_1.jpg); background-attachment: fixed;">
+        <div class="container">
+            <div class="row row_contact">
+                <div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="../img/svg/suitcase-1.svg" alt="icon-suitacse"></div>
+                    <div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
+                    <div class="footer_contact_btn">
+                        <a href="#!" class="primary-btn" >Leer más</a>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="../img/svg/placeholder.svg" alt="icon-placeholder"></div>
+                    <div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
+                    <div class="footer_contact_btn">
+                        <a href="#!" class="primary-btn" >Leer más</a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
+                    <div class="footer_contact_icon"><img src="../img/svg/sun.svg" alt="icon-sun"></div>
+                    <div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
+                    <div class="footer_contact_btn">
+                        <a href=""  data-toggle="modal" data-target="#centralModalSm" class="primary-btn" >Leer más</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Modal -->
     <div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
     aria-hidden="true">
@@ -336,7 +395,7 @@
                     <script>
                     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
                     </script>
-            </div>
+              </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
             </div>
@@ -344,47 +403,37 @@
         </div>
     </div>
     <!-- End modal -->
-    <!-- Start footer -->
-    <footer class="footer">
+    <!-- start footer -->
+    <footer>
         <div class="container">
-            <div class="row row_contact">
-                <div class="col-6 col-sm-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-                    <div class="footer_contact_icon"><img src="../img/svg/suitcase-1.svg" alt="icon-suitcase"></div>
-                    <div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
-                    <div class="footer_contact_btn">
-                        <a href="#!" class="primary-btn" >Leer más</a>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-                    <div class="footer_contact_icon"><img src="../img/svg/placeholder.svg" alt="icon-placeholder"></div>
-                    <div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
-                    <div class="footer_contact_btn">
-                        <a href="#!" class="primary-btn" >Leer más</a>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-                    <div class="footer_contact_icon"><img src="../img/svg/sun.svg" alt="icon-sun"></div>
-                    <div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
-                    <div class="footer_contact_btn">
-                        <a href=""  data-toggle="modal" data-target="#centralModalSm" class="primary-btn" >Leer más</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row footer_info">
-                <div class="col-12 col-sm-12 col-md-4 col-lg-4 d-flex mt justify-content-center text-center">
+            <div class="row">
+                <div class="col-6 col-sm-6 col-md-3 col-logo d-flex flex-column align-items-center justify-content-center">
                     <div class="footer_dest text-center">
-                        <div class="dest_logo"><img src="../img/logo/Recurso 2.png" alt="logotipo-destinos-quillabamba"></div>
-                        <h2 class="title_dest mt-3">Destinos Quillabamba</h2>
+                        <div class="logo-footer"><img src="../img/logo/Recurso 2.png" alt="logo-destinos-quillabamba"></div>
+                        <h2 class="title-logo mt-3">Destinos Quillabamba</h2>
                     </div>
                 </div>
-                <div class="col-12 col-sm-12 col-md-4 col-lg-4"></div>
-                <div class="col-12 col-sm-12 col-md-4 col-lg-4 footer_info_questions d-flex align-items-center justify-content-center">
+                <div class="col-6 col-sm-6 col-md-3 col-slogan d-flex align-items-center justify-content-center">
+                    <div class="footer_dest text-center">
+                        <div class="slogan-footer"><img src="../img/logo/vive disfruta viaja_1.png" alt="slogan-destinos-quillabamba"></div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
+                    <h3>Encuentranos en</h3>
+                    <ul class="footer_social list-unstyled">
+                        <li class="social_animate"><a class="icon-1" href="https://twitter.com/DestinosQ" target="_blank"><span class="icon-twitter"></span></a></li>
+                        <li class="so0cial_animate"><a class="icon-2" href="https://www.facebook.com/DestinosQuillabamba/" target="_blank"><span class="icon-facebook"></span></a></li>
+                        <li class="social_animate"><a class="icon-3" href="https://www.instagram.com/destinosQuillabamba/" target="_blank"><span class="icon-instagram"></span></a></li>
+                        <li class="social_animate"><a class="icon-4" href="https://www.youtube.com/channel/UCRfQ0fIHHx4RrjdH5eFfi7Q" target="_blank"><span class="icon-youtube"></span></a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-sm-12 col-md-3 col-lg-3 col_info_questions d-flex justify-content-center">
                     <div class="questions_footer">
-                        <h3 class="mb-4">¿tienes alguna pregunta?</h3>
+                        <h3>¿tienes alguna pregunta?</h3>
                         <div class="questions_icon">
                             <ul>
                                 <li><span class="icon icon-location2"></span>
-                                    <span class="text">Av. Bolgnesi. <br>
+                                    <span class="text">Av. Bolognesi. <br>
                                         Quillabamba, Cusco, Perú</span>
                                 </li>
                                 <li><span class="icon icon-phone"></span>
@@ -398,15 +447,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row py-4">
-                <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                    <div class="d-flex justify-content-center align-items-center text-center">
-                        <p class="text-white">Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos Los derechos reservados | Destinos Quillabamba <i class="icon-heart-o" aria-hidden="true"></i></p>
-                    </div>
-                </div>
-            </div>
         </div>
     </footer>
+    <!-- end footer -->
     <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="../js/popper.min.js"></script>
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
